--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.gradle
+.gradle/
 **/build/
 !src/**/build/
 
@@ -19,3 +19,6 @@ gradle-app.setting
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+.idea/
+.env
+log/
