--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - JAR_PATH=build/libs/*-SNAPSHOT.jar
+        - RESOURCE_PATH=build/resources/main
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 50M
+        reservations:
+          cpus: '0.25'
+          memory: 20M
     ports:
       - "127.0.0.1:8888:8888"
 
